first touch by james

--- a/index.html
+++ b/index.html
@@ -1,7 +1,22 @@
 <!DOCTYPE html>
 <html>
+<!--
+Created by James 6/14/2018
+-->
+
+<head>
+    <title>Agricola Game Explorer</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta charset="utf-8">
+	
+    
+    <script type="text/javascript" src="scripts/jquery-3.3.1.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="styles/index.css" />
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<div id="main">
+<p>
+Html Hello world
+<p>
+</div>
 </body>
-</html>
