--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@ Created by James 6/14/2018
     <meta charset="utf-8">
 	
     
+	<script type="text/javascript" src="scripts/main.js"></script>
     <script type="text/javascript" src="scripts/jquery-3.3.1.min.js"></script>
     <link rel="stylesheet" type="text/css" href="styles/index.css" />
 </head>
 <body>
 <div id="main">
 <p>
-Html Hello world
+Gric Hello world
 <p>
 </div>
 </body>
