--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ Created by James 6/14/2018
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
 	
+	<script type="text/javascript" src="scripts/PapaParse-4.5.0/papaparse.min.js"></script>
     <script type="text/javascript" src="scripts/jquery-3.3.1.min.js"></script>
 	<script type="text/javascript" src="scripts/main.js"></script>
     
