--- a/index.html
+++ b/index.html
@@ -1,23 +1,68 @@
 <!DOCTYPE html>
-<html>
-<!--
-Created by James 6/14/2018
--->
-
+<html lang="en">
 <head>
-    <title>Agricola Game Explorer</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <meta charset="utf-8">
-	
-    <script type="text/javascript" src="scripts/jquery-3.3.1.min.js"></script>
-	<script type="text/javascript" src="scripts/main.js"></script>
-    
-    <link rel="stylesheet" type="text/css" href="styles/index.css" />
+
+  <!-- Basic Page Needs
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta charset="utf-8">
+  <title>Gric Squad</title>
+  <meta name="Agricola Game Explorer" content="">
+  <meta name="James and Ram" content="">
+
+  <!-- Mobile Specific Metas
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- FONT
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+
+  <!-- CSS
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="styles/skeleton.css">
+
+  <!-- Favicon
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="icon" type="image/png" href="images/favicon.png">
+
+  <!-- Script
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <script type="text/javascript" src="scripts/jquery-3.3.1.min.js"></script>
+  <script type="text/javascript" src="scripts/main.js"></script>
+  
 </head>
 <body>
-<div id="main">
-<p>
-Gric Hello world
-<p>
-</div>
+
+  <!-- Primary Page Layout
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <div class="container">
+    <div class="row">
+      <div class="one-half column" style="margin-top: 25%">
+        <h4>Basic Page</h4>
+        <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
+		<p>
+			<form>
+			View game: <input id="game_number" name="game_number" type="select">
+			<input value="submit input" type="submit">
+			</form>
+		</p>
+		<p>
+			<form>
+				<input type="file" id="fileinput" />
+				<input value="submit input" type="submit">
+			</form>
+		</p>
+		
+      </div>
+    </div>
+	<div id="target" class="row">
+		
+		
+	</div>
+  </div>
+
+<!-- End Document
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
+</html>
