--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
   <!-- Script
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <script type="text/javascript" src="scripts/PapaParse-4.5.0/papaparse.min.js"></script>
   <script type="text/javascript" src="scripts/jquery-3.3.1.min.js"></script>
   <script type="text/javascript" src="scripts/main.js"></script>
   
