--- a/index.html
+++ b/index.html
@@ -39,20 +39,117 @@
   <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
-        <h4>Basic Page</h4>
-        <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
-		<p>
-			<form>
-			View game: <input id="game_number" name="game_number" type="select">
-			<input value="submit input" type="submit">
-			</form>
-		</p>
-		<p>
-			<form>
-				<input type="file" id="fileinput" />
-				<input value="submit input" type="submit">
-			</form>
-		</p>
+        <h4>Game View</h4>
+        <p>Here all the games are displayed in order </p>
+		
+		<!-- Prepopulated table (will be removed later)
+		–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+		<table class="u-full-width">
+		  <thead>
+			<tr>
+			  <th>Game</th>
+			  <th>Player</th>
+			  <th>Fields</th>
+			  <th>Pastures</th>
+			  <th>Grain</th>
+			  <th>Vegetables</th>
+			  <th>Sheep</th>
+			  <th>Boar</th>
+			  <th>Cattle</th>
+			  <th>Unused</th>
+			  <th>Fenced Stables</th>
+			  <th>Clay rooms</th>
+			  <th>Stone rooms</th>
+			  <th>Family</th>
+			  <th>Cards</th>
+			  <th>Bonus</th>
+			  <th>Total</th>
+			
+			</tr>
+		  </thead>
+		  <tbody>
+			<tr>
+			
+			  <td>1</td>
+			  <td>James</td>
+			  <td>-1</td>
+			  <td>2</td>
+			  <td>1</td>
+			  <td>-1</td>
+			  <td>2</td>
+			  <td>-1</td>
+			  <td>0</td>
+			  <td>-2</td>
+			  <td>1</td>
+			  <td>5</td>
+			  <td>0</td>
+			  <td>12</td>
+			  <td>3</td>
+			  <td>0</td>
+			  <td>20</td>
+			</tr>
+			<tr>
+			  <td>1</td>
+			  <td>Nico</td>
+			  <td>-1</td>
+			  <td>4</td>
+			  <td>-1</td>
+			  <td>-1</td>
+			  <td>-1</td>
+			  <td>-1</td>
+			  <td>0</td>
+			  <td>-5</td>
+			  <td>1</td>
+			  <td>0</td>
+			  <td>6</td>
+			  <td>15</td>
+			  <td>1</td>
+			  <td>0</td>
+			  <td>16</td>
+			</tr>
+			<tr>
+			  <td>1</td>
+			  <td>Calvin</td>
+			  <td>2</td>
+			  <td>4</td>
+			  <td>2</td>
+			  <td>2</td>
+			  <td>-1</td>
+			  <td>2</td>
+			  <td>2</td>
+			  <td>0</td>
+			  <td>1</td>
+			  <td>0</td>
+			  <td>0</td>
+			  <td>9</td>
+			  <td>-11</td>
+			  <td>0</td>
+			  <td>12</td>
+			</tr>
+			<tr>
+			  <td>1</td>
+			  <td>Ram</td>
+			  <td>-1</td>
+			  <td>4</td>
+			  <td>1</td>
+			  <td>-1</td>
+			  <td>1</td>
+			  <td>1</td>
+			  <td>1</td>
+			  <td>0</td>
+			  <td>0</td>
+			  <td>0</td>
+			  <td>8</td>
+			  <td>12</td>
+			  <td>1</td>
+			  <td>0</td>
+			  <td>27</td>
+			</tr>
+			
+			
+		  </tbody>
+		</table>
+		
 		
       </div>
     </div>
