--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
   <!-- Script
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/4.5.0/papaparse.min.js"></script>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type="text/javascript" src="scripts/main.js"></script>
@@ -155,9 +156,14 @@
       </div>
     </div>
 	<div id="target" class="row">
+
 		
 		
 	</div>
+	<div id="playerSelect">
+	</div>
+	<canvas id="gricVisual"></canvas>
+
   </div>
 
 <!-- End Document
