--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type="text/javascript" src="scripts/colors.js"></script>
   <script type="text/javascript" src="scripts/main.js"></script>
+  <script type="text/javascript" src="scripts/charts.js"></script>
   
 </head>
 <body>
