refactor to util.js

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   <script type="text/javascript" src="scripts/colors.js"></script>
   <script type="text/javascript" src="scripts/main.js"></script>
   <script type="text/javascript" src="scripts/charts.js"></script>
+  <script type="text/javascript" src="scripts/util.js"></script>
   
 </head>
 <body>
