--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
   <script type="text/javascript" src="scripts/colors.js"></script>
   <script type="text/javascript" src="scripts/main.js"></script>
   <script type="text/javascript" src="scripts/charts.js"></script>
+  <script type="text/javascript" src="scripts/chartUtil.js"></script>
   <script type="text/javascript" src="scripts/util.js"></script>
   
 </head>
