--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   <script type="text/javascript" src="scripts/main.js"></script>
   <script type="text/javascript" src="scripts/charts.js"></script>
   <script type="text/javascript" src="scripts/chartUtil.js"></script>
+  <script type="text/javascript" src="scripts/tables.js"></script>
   <script type="text/javascript" src="scripts/util.js"></script>
   
 </head>
@@ -81,7 +82,7 @@
 	<!-- Table Page ––––––––––––––––––––––––––––––––– -->
 	<div id="table" class="container" hidden>
 		<div class="row">
-			<div class="twelve columns">
+			<div id="tables_container" class="twelve columns">
 				<h4>Game View</h4>
 				<p>Here all the games are displayed in order </p>
 				
