display game upon clicking chart point

--- a/index.html
+++ b/index.html
@@ -213,6 +213,14 @@
 	</div>
 	
 	<!-- Graph Page ––––––––––––––––––––––––––––––––– -->
+	<!-- The Modal -->
+	<div id="gameModal" class="modal">
+
+		<!-- Modal content -->
+		<div class="modal-content">
+		</div>
+
+	</div>
 	<div id="graph" class="container" hidden>
 		<div class="row">
 			<div id="playerSelect" class="twelve columns">
