--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <link rel="stylesheet" href="styles/index.css">
   <link rel="stylesheet" href="styles/chart.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.8.6/chosen.min.css" />
+  <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
   
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
