initial statistics page

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
   <script type="text/javascript" src="scripts/chartUtil.js"></script>
   <script type="text/javascript" src="scripts/tables.js"></script>
   <script type="text/javascript" src="scripts/util.js"></script>
+  <script type="text/javascript" src="scripts/statistics.js"></script>
   
 </head>
 <body>
@@ -120,7 +121,10 @@
 	<div id="stats" class="container" hidden>
 		<div class="row">
 			<div class="twelve columns">
-				<p>Statistics coming soon!</p>
+				<div id="statsSelect" class="twelve columns">
+				</div>
+				<div id="averages_container" class="twelve columns">
+				</div>
 			</div>
 		</div>
 	</div>
